# ChangeLog for net-irc/jircii
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/jircii/ChangeLog,v 1.9 2004/10/17 01:37:12 swegener Exp $

*jircii-16 (17 Oct 2004)

  17 Oct 2004; Sven Wegener <swegener@gentoo.org> +jircii-16.ebuild:
  Version bump.

*jircii-15 (03 Oct 2004)

  03 Oct 2004; Sven Wegener <swegener@gentoo.org> +jircii-15.ebuild:
  Version bump.

  12 Sep 2004; Sven Wegener <swegener@gentoo.org> jircii-14.ebuild:
  Marked stable on x86.

*jircii-14 (08 Aug 2004)

  08 Aug 2004; Sven Wegener <swegener@gentoo.org> +jircii-14.ebuild,
  -jircii-1_beta10.ebuild, -jircii-1_beta11.ebuild, -jircii-1_beta13.ebuild:
  Version bump. Changed version numbering scheme.

*jircii-1_beta13 (06 Aug 2004)

  06 Aug 2004; Sven Wegener <swegener@gentoo.org> +jircii-1_beta13.ebuild:
  Version bump.

*jircii-1_beta11 (19 Jul 2004)

  19 Jul 2004; Sven Wegener <swegener@gentoo.org> +jircii-1_beta11.ebuild:
  Version bump.

  17 Jul 2004; David Holm <dholm@gentoo.org> jircii-1_beta10.ebuild:
  Added to ~ppc.

  13 Jul 2004; Sven Wegener <swegener@gentoo.org> jircii-1_beta10.ebuild:
  Use exec in wrapper script.

*jircii-1_beta10 (12 Jul 2004)

  12 Jul 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml,
  +jircii-1_beta10.ebuild:
  Initial import, ebuild written by me.
